--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
-    "mongodb": "^3.2.4"
+    "mongodb": "^3.2.4",
+    "mongoose": "^5.5.8"
   }
 }
